[package]
name = "pvault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.9.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.4.0"

[dev-dependencies]
mollusk-svm = "0.7.2"
solana-sdk = "3.0.0"

# To build:
# $ cargo update --precise 1.6.0 -p base64ct@1.8.0 # Downgrade base64ct in solana-sdk 3.0.0

